--- a/harithmapos/templates/invoice/head.html
+++ b/harithmapos/templates/invoice/head.html
@@ -104,8 +104,8 @@
                         <td class="align-middle">{{invoice_head.service_status_str}}</td>
                         <td class="align-middle">{{invoice_head.gross_price}}</td>
                         <td class="text-end">
-                            <a href="{{ url_for('invoice_blueprint.invoice_head_detail', invoice_head_id=invoice_head.id) }}" class="btn btn-warning" ><i class="bi bi-person-fill-gear"></i></a>
-                            <a href="{{ url_for('invoice_blueprint.delete_invoice_head', invoice_head_id=invoice_head.id) }}" class="btn btn-danger" onclick="return confirm('Are you sure to delete?')"><i class="bi bi-person-dash-fill"></i></a>
+                            <a href="{{ url_for('invoice_blueprint.invoice_head_detail', invoice_head_id=invoice_head.id) }}" class="btn btn-sm btn-warning" >Edit</a>
+                            <a href="{{ url_for('invoice_blueprint.delete_invoice_head', invoice_head_id=invoice_head.id) }}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure to delete?')">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
