--- a/harithmapos/templates/invoice/update.html
+++ b/harithmapos/templates/invoice/update.html
@@ -54,7 +54,7 @@
             <td class="align-middle">{{invoice_detail.item.unit_price}}</td>
             <td class="align-middle">{{invoice_detail.total_price}}</td>
             <td class="align-middle">
-              <a href="{{url_for('invoice_blueprint.delete_invoice_detail', invoice_detail_id=invoice_detail.id)}}" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
+              <a href="{{url_for('invoice_blueprint.delete_invoice_detail', invoice_detail_id=invoice_detail.id)}}" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
                 onclick="return confirm('Are you sure to delete?')"><i class="bi bi-trash3-fill"></i></a>
             </td>
           </tr>
