--- a/harithmapos/templates/layout/navbar.html
+++ b/harithmapos/templates/layout/navbar.html
@@ -10,14 +10,20 @@
             <ul class="navbar-nav ms-auto">
                 {% if current_user.is_authenticated %}
                     <a class="nav-item nav-link" href="{{ url_for('dashboard_blueprint.dashboard') }}">Dashboard</a>
-                    <a class="nav-item nav-link" href="{{ url_for('invoice_blueprint.invoice_head') }}">Invoice</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Invoice</a>
+                        <ul class="dropdown-menu">
+                            <a class="nav-item nav-link" href="{{ url_for('invoice_blueprint.invoice_head') }}">Service</a>
+                            <a class="nav-item nav-link" href="{{ url_for('invoice_blueprint.item_invoice_head') }}">Item</a>
+                        </ul>
+                    </li>
                     <a class="nav-item nav-link" href="{{ url_for('purchase_order_blueprint.purchase_order_head') }}">Purchase Order</a>
                     <a class="nav-item nav-link" href="{{ url_for('item_blueprint.item') }}">Item</a>
                     <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Other</a>
                         <ul class="dropdown-menu">
-                            <li><a class="nav-item nav-link" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('employee_blueprint.employee') }}">Employee</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('washbay_blueprint.washbay') }}">Wash Bay</a></li>
                             <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
@@ -25,8 +31,16 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                         </ul>
                     </li>
-                    <a class="nav-item nav-link" href="{{ url_for('user_blueprint.account') }}">Account</a>
-                    <a class="nav-item nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}</a>
+                        <ul class="dropdown-menu">
+                            <a class="nav-item nav-link" href="{{ url_for('user_blueprint.account') }}">Account</a>
+                            <li><hr class="dropdown-divider"></li> 
+                            <a class="nav-item nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
+                        </ul>
+                    </li>
+                    <img src="{{ url_for('static', filename='user_images/'+current_user.image) }}" class="rounded-circle" height="40" alt="Avatar" />
+                    
                 {% else %}
                     <a class="nav-item nav-link" href="{{ url_for('user_blueprint.login') }}">Login</a>
                     <a class="nav-item nav-link" href="{{ url_for('user_blueprint.register') }}">Register</a>
