--- a/harithmapos/templates/purchase_order/head.html
+++ b/harithmapos/templates/purchase_order/head.html
@@ -78,8 +78,8 @@
                         <td class="align-middle">{{purchase_order_head.supplier.name}}</td>
                         <td class="align-middle">{{purchase_order_head.gross_price}}</td>
                         <td class="text-end">
-                            <a href="{{ url_for('purchase_order_blueprint.purchase_order_head_detail', purchase_order_head_id=purchase_order_head.id) }}" class="btn btn-warning" ><i class="bi bi-person-fill-gear"></i></a>
-                            <a href="{{ url_for('purchase_order_blueprint.delete_purchase_order_head', purchase_order_head_id=purchase_order_head.id) }}" class="btn btn-danger" onclick="return confirm('Are you sure to delete?')"><i class="bi bi-person-dash-fill"></i></a>
+                            <a href="{{ url_for('purchase_order_blueprint.purchase_order_head_detail', purchase_order_head_id=purchase_order_head.id) }}" class="btn btn-sm btn-warning" >Edit</a>
+                            <a href="{{ url_for('purchase_order_blueprint.delete_purchase_order_head', purchase_order_head_id=purchase_order_head.id) }}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure to delete?')">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
