--- a/harithmapos/templates/purchase_order/update.html
+++ b/harithmapos/templates/purchase_order/update.html
@@ -54,7 +54,7 @@
             <td class="align-middle">{{purchase_order_detail.item.unit_price}}</td>
             <td class="align-middle">{{purchase_order_detail.total_price}}</td>
             <td class="align-middle">
-              <a href="{{url_for('purchase_order_blueprint.delete_purchase_order_detail', purchase_order_detail_id=purchase_order_detail.id)}}" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
+              <a href="{{url_for('purchase_order_blueprint.delete_purchase_order_detail', purchase_order_detail_id=purchase_order_detail.id)}}" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
                 onclick="return confirm('Are you sure to delete?')"><i class="bi bi-trash3-fill"></i></a>
             </td>
           </tr>
