--- a/harithmapos/templates/layout/navbar.html
+++ b/harithmapos/templates/layout/navbar.html
@@ -18,6 +18,7 @@
                         </ul>
                     </li>
                     <a class="nav-item nav-link" href="{{ url_for('purchase_order_blueprint.purchase_order_head') }}">Purchase Order</a>
+                    <a class="nav-item nav-link" href="{{ url_for('payment_blueprint.payment') }}">Payment</a>
                     <a class="nav-item nav-link" href="{{ url_for('item_blueprint.item') }}">Item</a>
                     <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
                     <li class="nav-item dropdown">
