--- a/harithmapos/templates/dashboard.html
+++ b/harithmapos/templates/dashboard.html
@@ -4,9 +4,9 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col">
+            <caption>Waiting Customers</caption>
             {% if waiting_invoices %}
-            <table class="table table-sm table-hover table-bordered border-warning table-warning caption-top">
-                <caption>Waiting Customers</caption>
+            <table class="table table-sm table-hover table-bordered">
                 <thead class="thread-dark">
                     <tr>
                         <th scope="col">ID</th>
@@ -20,7 +20,7 @@
                     {% for invoice in waiting_invoices %}
                         <tr>
                             <td class="align-middle">
-                                <a href="{{ url_for('invoice_blueprint.invoice_head_detail', invoice_head_id=invoice.id) }}" class="btn btn-secondary btn-sm">{{invoice.id}}</a>
+                                <a href="{{ url_for('invoice_blueprint.invoice_head_detail', invoice_head_id=invoice.id) }}" class="btn btn-warning btn-sm">{{invoice.id}}</a>
                             </td>
                             <td class="align-middle">{{invoice.customer.name}}</td>
                             <td class="align-middle">{{invoice.vehical.number}}</td>
@@ -39,9 +39,9 @@
             {% endif %}
         </div>
         <div class="col">
+            <caption>Completed Customers</caption>
             {% if done_invoices %}
-            <table class="table table-sm table-hover table-bordered border-success table-success  caption-top">
-                <caption>Done Customers</caption>
+            <table class="table table-sm table-hover table-bordered">
                 <thead class="thread-dark">
                     <tr>
                         <th scope="col">ID</th>
@@ -55,7 +55,7 @@
                     {% for invoice in done_invoices %}
                         <tr>
                             <td class="align-middle">
-                                <a href="{{ url_for('invoice_blueprint.invoice_head_detail', invoice_head_id=invoice.id) }}" class="btn btn-secondary btn-sm">{{invoice.id}}</a>
+                                <a href="{{ url_for('invoice_blueprint.invoice_head_detail', invoice_head_id=invoice.id) }}" class="btn btn-success btn-sm">{{invoice.id}}</a>
                             </td>
                             <td class="align-middle">{{invoice.customer.name}}</td>
                             <td class="align-middle">{{invoice.vehical.number}}</td>
@@ -76,8 +76,8 @@
     </div>
     <div class="row row-cols-1 row-cols-md-2">
         {% for washbay in active_wash_bays %}
-            <div class="col mt-3">
-                <div class="card border-success">
+            <div class="col mt-2">
+                <div class="card bg-body-tertiary">
                     <div class="card-header d-flex">
                         <span><b>{{ washbay.name }}</b></span>
                         <span class="ms-auto"><b>{{ washbay.active_invoice.vehical.number }}</b></span>
@@ -135,8 +135,8 @@
             </div>
         {% endfor %}
         {% for invoice in polishing_invoices %}
-            <div class="col mt-3">
-                <div class="card border-success">
+            <div class="col mt-2">
+                <div class="card bg-body-tertiary">
                     <div class="card-header d-flex">
                         <span>Polishing Area</span>
                         <span class="ms-auto"><b>{{ invoice.vehical.number }}</b></span>
@@ -196,8 +196,8 @@
     </div>
     <div class="row row-cols-1 row-cols-md-4">
         {% for washbay in inactive_wash_bays %}
-            <div class="col mt-3">
-                <div class="card">
+            <div class="col mt-4">
+                <div class="card bg-body-tertiary">
                     <div class="card-header d-flex">
                         <span>{{ washbay.name }}</span>
                         <span class="ms-auto"><b></b></span>
