Added customer view

--- a/harithmapos/templates/employee.html
+++ b/harithmapos/templates/employee.html
@@ -49,7 +49,7 @@
                         {{ employee_create_form.wage(class="form-control form-control-lg") }}
                     </div>
                     <div class="form-group">
-                        {{ employee_update_form.submit(class="btn btn-primary mt-4") }}
+                        {{ employee_create_form.submit(class="btn btn-primary mt-4") }}
                     </div>
                 </form>
             </div>
