--- a/harithmapos/templates/invoice/customer_view.html
+++ b/harithmapos/templates/invoice/customer_view.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col mt-2">
-            <h1 class="lead text-center">Service status</h1>
+            <h3 class="text-center">Service status</h3>
             <div class="card bg-body-tertiary">
                 <div class="card-header d-flex">
                     <span><b>{{ invoice_head.washbay.name }}</b></span>
@@ -66,7 +66,7 @@
     
     <div class="row">
         <div class="col mt-2">
-            <h1 class="lead text-center">Current Bill</h1>
+            <h3 class="text-center">Current Bill</h3>
             <table class="table table-success table-striped table-hover" border="1">
                 <thead class="thread-dark">
                     <tr>
