--- a/harithmapos/templates/invoice/create.html
+++ b/harithmapos/templates/invoice/create.html
@@ -5,7 +5,7 @@
         <div class="col-md-6">
             <div class="card">
                 <header class="card-header">
-                    <h4 class="card-title mt-2">Register Form</h4>
+                    <h4 class="card-title mt-2">Service Invoice Form</h4>
                 </header>
                 <article class="card-body">
                     <form method="POST" action="">
@@ -49,11 +49,6 @@
                         </div>
                     </form>
                 </article>
-                <div class="border-top card-body text-center">
-                    <small class="text-muted">
-                        Have an account? <a href="{{ url_for('user_blueprint.login') }}">Log In</a>
-                    </small>
-                </div>
             </div>
         </div>
     </div>
